# spira-trust

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SPIRA_AGENT_EFFICIENCY_PROGRAM_FINAL_REPORT.json  SPIRA_AGENT_EFFICIENCY_PROGRAM_FINAL_REPORT.md  action.yml  install.ps1  install.sh  pyproject.toml
bench/: bench_agent_memory_flow.py  bench_agent_savings.py  bench_cache_performance.py  codex_real_agent_protocol.md  run_codex_real_agent_benchmark.py  run_codex_repeated_cache_resume.py
corpus/: build_corpus.py
docs/: 030_closure_note.md  030_release_integration.md  agent_action_contract.md  agent_context_tax.md  agent_integration.md  ai_assisted_builds.md  audit_append_boundary.md  capability_matrix.md  ci_pilot_15_minutes.md  ci_quickstart.md  demo_10_minutes.md  installer_record_behavior.md  pilot_feedback_questions.md  pilot_outreach_email.md  pilot_readiness_pack.md  python_wheel_sbom_survey.md  real_wheelhouse_example.md  release_self_check.md  session_token_target_decision.md  unification_proof.md  uv_pip_workflow.md  why_spira_trust.md
release/: expected_previous_block.example.json
requirements/: nesira_adapters_win_amd64_cp312.txt
research/: counterfactual_session_replay_methodology.md  domain1_identity_baseline_materialization_authorization.md  domain1_identity_baseline_review.md  domain3_terraform_plan_negative_closeout_review.md  domain3_terraform_plan_night_run_handoff.md  domain3_terraform_plan_research_closeout.md  domain3_terraform_plan_research_declaration.md  domain3_terraform_plan_research_declaration_review.md  domain3_terraform_plan_retry_closeout.md  domain3_terraform_plan_retry_closeout_review.md  domain3_terraform_plan_run_ledger.md  domain3_terraform_retry_authorization.md  domain3_terraform_retry_environment_readiness.md  domain3_terraform_retry_environment_readiness_ready.md  domain_neutral_unification_core_gate_a_final_review.md  domain_neutral_unification_core_gate_a_implementation_authorization.md  domain_neutral_unification_core_gate_a_implementation_report.md  domain_neutral_unification_core_gate_a_implementation_review.md  domain_neutral_unification_core_gate_a_regression_methodology.md  domain_neutral_unification_core_gate_a_retry_authorization.md  domain_neutral_unification_core_gate_a_retry_report.md  domain_neutral_unification_core_gate_a_review.md  domain_neutral_unification_core_gate_a_v2_review.md  domain_neutral_unification_core_interface_proposal.md  domain_neutral_unification_core_interface_proposal_v2.md  domain_neutral_unification_core_interface_proposal_v3.md  machine_contract_passthrough_contradiction_fixture_authorization.md  machine_contract_passthrough_contradiction_fixture_review.md  machine_contract_passthrough_envelope_schema_authorization.md  machine_contract_passthrough_envelope_schema_review.md  machine_contract_passthrough_envelope_schema_v1.schema.json  machine_contract_passthrough_envelope_validator_implementation_authorization.md  machine_contract_passthrough_envelope_validator_implementation_report.md  machine_contract_passthrough_envelope_validator_implementation_results.json  machine_contract_passthrough_envelope_validator_implementation_review.md  machine_contract_passthrough_envelope_validator_spec.md  (+68 more)
(+1501 files in other folders)
