[build-system]
requires = []
build-backend = "manual-public-wheel"

[project]
name = "spira-trust"
version = "0.6.1"
description = "Offline verifier for Python wheel evidence before install."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "SPIRA Trust" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/snir-spira37/spira-trust"
Repository = "https://github.com/snir-spira37/spira-trust"
Issues = "https://github.com/snir-spira37/spira-trust/issues"
Documentation = "https://github.com/snir-spira37/spira-trust/tree/main/docs"

[project.scripts]
spira-trust = "spira_core.trust_cli:main"
spira = "spira_core.trust_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["work", ".venv", "dist", "build", "*.egg-info"]
pythonpath = ["source"]

[tool.spira.public-wheel]
builder = "tools/build_spira_trust_public.py"
package_allowlist = [
  "spira_core.__init__",
  "spira_core.adapters",
  "spira_core.agent_cache",
  "spira_core.agent_status",
  "spira_core.agent_summary",
  "spira_core.attestation_verify",
  "spira_core.bom",
  "spira_core.combined_verdict",
  "spira_core.contracts",
  "spira_core.core",
  "spira_core.cyclonedx_export",
  "spira_core.decision_report",
  "spira_core.drift",
  "spira_core.entry_points_policy",
  "spira_core.governance_engine",
  "spira_core.ledger",
  "spira_core.license_policy",
  "spira_core.lockfile_policy",
  "spira_core.policy_pack",
  "spira_core.range_parser",
  "spira_core.rebaseline",
  "spira_core.rerun_planner",
  "spira_core.review",
  "spira_core.sbom_consistency",
  "spira_core.target_environment",
  "spira_core.trust",
  "spira_core.trust_cli",
  "spira_core.trust_graph",
  "spira_core.unification_proof",
  "spira_core.decision015",
  "spira_core.vendored_stone015",
]
